--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -21,9 +21,15 @@
     <ClCompile Include="AntivirusForm.cpp">
       <Filter>Файлы заголовков</Filter>
     </ClCompile>
+    <ClCompile Include="..\CommunicationHelper\Helper.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
   <ItemGroup>
     <ClInclude Include="AntivirusForm.h">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
+    <ClInclude Include="..\CommunicationHelper\Helper.hpp">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
