--- a/ServerAntivirus/ServerAntivirus.vcxproj.filters
+++ b/ServerAntivirus/ServerAntivirus.vcxproj.filters
@@ -18,5 +18,13 @@
     <ClCompile Include="ServerAntivirus.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="..\CommunicationHelper\Helper.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
+  </ItemGroup>
+  <ItemGroup>
+    <ClInclude Include="..\CommunicationHelper\Helper.hpp">
+      <Filter>Файлы заголовков</Filter>
+    </ClInclude>
   </ItemGroup>
 </Project>
