--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -78,6 +78,8 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>WIN32;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <LanguageStandard_C>stdc17</LanguageStandard_C>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <AdditionalDependencies />
@@ -126,9 +128,11 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <ClCompile Include="..\CommunicationHelper\Helper.cpp" />
     <ClCompile Include="AntivirusForm.cpp" />
   </ItemGroup>
   <ItemGroup>
+    <ClInclude Include="..\CommunicationHelper\Helper.hpp" />
     <ClInclude Include="AntivirusForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
