--- a/ServerAntivirus/ServerAntivirus.vcxproj.filters
+++ b/ServerAntivirus/ServerAntivirus.vcxproj.filters
@@ -15,15 +15,15 @@
     </Filter>
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="ServerAntivirus.cpp">
+    <ClCompile Include="Service.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
-    <ClCompile Include="..\CommunicationHelper\Helper.cpp">
+    <ClCompile Include="..\Helper.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\CommunicationHelper\Helper.hpp">
+    <ClInclude Include="..\Helper.hpp">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
