--- a/Client/Client.vcxproj
+++ b/Client/Client.vcxproj
@@ -78,7 +78,7 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <PreprocessorDefinitions>WIN32;_DEBUG;%(PreprocessorDefinitions)</PreprocessorDefinitions>
-      <LanguageStandard_C>stdc17</LanguageStandard_C>
+      <LanguageStandard_C>Default</LanguageStandard_C>
       <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
@@ -128,18 +128,18 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="..\CommunicationHelper\Helper.cpp" />
-    <ClCompile Include="AntivirusForm.cpp" />
+    <ClCompile Include="..\Helper.cpp" />
+    <ClCompile Include="ClientForm.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="..\CommunicationHelper\Helper.hpp" />
-    <ClInclude Include="AntivirusForm.h">
+    <ClInclude Include="..\Helper.hpp" />
+    <ClInclude Include="ClientForm.h">
       <FileType>CppForm</FileType>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
-    <EmbeddedResource Include="AntivirusForm.resx">
-      <DependentUpon>AntivirusForm.h</DependentUpon>
+    <EmbeddedResource Include="ClientForm.resx">
+      <DependentUpon>ClientForm.h</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
