--- a/Client/Client.vcxproj.filters
+++ b/Client/Client.vcxproj.filters
@@ -18,18 +18,18 @@
     <None Include="..\ClientAntivirus\ClientAntivirus\app.config" />
   </ItemGroup>
   <ItemGroup>
-    <ClCompile Include="AntivirusForm.cpp">
+    <ClCompile Include="ClientForm.cpp">
       <Filter>Файлы заголовков</Filter>
     </ClCompile>
-    <ClCompile Include="..\CommunicationHelper\Helper.cpp">
+    <ClCompile Include="..\Helper.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="AntivirusForm.h">
+    <ClInclude Include="ClientForm.h">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
-    <ClInclude Include="..\CommunicationHelper\Helper.hpp">
+    <ClInclude Include="..\Helper.hpp">
       <Filter>Файлы заголовков</Filter>
     </ClInclude>
   </ItemGroup>
