Добавлена связь с SQLite у серера (сервиса)

--- a/DatabaseEditor/DatabaseEditor/DatabaseEditor.vcxproj
+++ b/DatabaseEditor/DatabaseEditor/DatabaseEditor.vcxproj
@@ -157,6 +157,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="app.config" />
+    <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="DatabaseEditor.resx">
