--- a/Service/Service.vcxproj.filters
+++ b/Service/Service.vcxproj.filters
@@ -18,5 +18,8 @@
     <ClCompile Include="Service.cpp">
       <Filter>Исходные файлы</Filter>
     </ClCompile>
+    <ClCompile Include="ScanEngine.cpp">
+      <Filter>Исходные файлы</Filter>
+    </ClCompile>
   </ItemGroup>
 </Project>
