--- a/Service/Service.vcxproj.filters
+++ b/Service/Service.vcxproj.filters
@@ -22,4 +22,7 @@
       <Filter>Исходные файлы</Filter>
     </ClCompile>
   </ItemGroup>
+  <ItemGroup>
+    <Library Include="sqlite3.lib" />
+  </ItemGroup>
 </Project>
