--- a/Service/Service.vcxproj
+++ b/Service/Service.vcxproj
@@ -21,7 +21,7 @@
   <PropertyGroup Label="Globals">
     <VCProjectVersion>16.0</VCProjectVersion>
     <Keyword>Win32Proj</Keyword>
-    <ProjectGuid>{8c377588-16b9-4c95-8e37-8f3df546d1af}</ProjectGuid>
+    <ProjectGuid>{8C377588-16B9-4C95-8E37-8F3DF546D1AF}</ProjectGuid>
     <RootNamespace>Service</RootNamespace>
     <WindowsTargetPlatformVersion>10.0</WindowsTargetPlatformVersion>
   </PropertyGroup>
@@ -88,10 +88,14 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
+      <AdditionalIncludeDirectories>C:\Users\elisi\Documents\Visual Studio 2019\SQLite\sqlite-amalgamation;C:\Users\elisi\source\repos\Antivirus\Library;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
+      <AdditionalDependencies>Library.lib;sqlite3.lib;%(AdditionalDependencies)</AdditionalDependencies>
+      <AdditionalLibraryDirectories>C:\Users\elisi\Documents\Visual Studio 2019\SQLite\.dll;C:\Users\elisi\source\repos\Antivirus\$(IntDir);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|Win32'">
@@ -102,6 +106,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>WIN32;NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -114,16 +119,16 @@
     <ClCompile>
       <WarningLevel>Level3</WarningLevel>
       <SDLCheck>true</SDLCheck>
-      <PreprocessorDefinitions>_DEBUG;_CONSOLE;_CRT_SECURE_NO_WARNINGS;%(PreprocessorDefinitions)</PreprocessorDefinitions>
+      <PreprocessorDefinitions>_DEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
-      <AdditionalIncludeDirectories>C:\Users\elisi\Documents\Visual Studio 2019\SQLite\sqlite-amalgamation;C:\Users\elisi\source\repos\Antivirus\Library;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <LanguageStandard>stdcpp17</LanguageStandard>
+      <AdditionalIncludeDirectories>C:\Users\elisi\source\repos\Antivirus\Library;C:\Users\elisi\Documents\Visual Studio 2019\SQLite\sqlite-amalgamation;%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <GenerateDebugInformation>true</GenerateDebugInformation>
-      <AdditionalDependencies>Library.lib;sqlite3.lib;%(AdditionalDependencies)</AdditionalDependencies>
-      <AdditionalLibraryDirectories>C:\Users\elisi\source\repos\Antivirus\Service\;C:\Users\elisi\source\repos\Antivirus\$(IntDir);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>C:\Users\elisi\Documents\Visual Studio 2019\SQLite\.dll;C:\Users\elisi\source\repos\Antivirus\$(IntDir);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalDependencies>Library.lib;sqlite3.dll;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
   </ItemDefinitionGroup>
   <ItemDefinitionGroup Condition="'$(Configuration)|$(Platform)'=='Release|x64'">
@@ -134,6 +139,7 @@
       <SDLCheck>true</SDLCheck>
       <PreprocessorDefinitions>NDEBUG;_CONSOLE;%(PreprocessorDefinitions)</PreprocessorDefinitions>
       <ConformanceMode>true</ConformanceMode>
+      <LanguageStandard>stdcpp17</LanguageStandard>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
@@ -143,27 +149,29 @@
     </Link>
   </ItemDefinitionGroup>
   <ItemGroup>
-    <ClCompile Include="Database.cpp" />
-    <ClCompile Include="FilesWorker.cpp" />
-    <ClCompile Include="InformationStorage.cpp" />
-    <ClCompile Include="Monitoring.cpp" />
-    <ClCompile Include="Scanner.cpp" />
-    <ClCompile Include="ScheduledScanner.cpp" />
-    <ClCompile Include="Service.cpp" />
-  </ItemGroup>
-  <ItemGroup>
-    <Library Include="sqlite3.lib" />
-  </ItemGroup>
-  <ItemGroup>
-    <ClInclude Include="Database.h" />
+    <ClInclude Include="..\Server\Database.h" />
+    <ClInclude Include="..\Server\InformationStorage.h" />
+    <ClInclude Include="..\Server\Monitoring.h" />
+    <ClInclude Include="..\Server\Scanner.h" />
+    <ClInclude Include="..\Server\ScheduledScanner.h" />
+    <ClInclude Include="AntimalwareService.h" />
     <ClInclude Include="FilesWorker.h" />
-    <ClInclude Include="InformationStorage.h" />
-    <ClInclude Include="Monitoring.h" />
-    <ClInclude Include="Scanner.h" />
-    <ClInclude Include="ScheduledScanner.h" />
+    <ClInclude Include="Service.h" />
+    <ClInclude Include="ServiceInitializer.h" />
+    <ClInclude Include="ServiceManager.h" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="sqlite3.dll" />
+    <ClCompile Include="..\Server\Database.cpp" />
+    <ClCompile Include="..\Server\InformationStorage.cpp" />
+    <ClCompile Include="..\Server\Monitoring.cpp" />
+    <ClCompile Include="..\Server\Scanner.cpp" />
+    <ClCompile Include="..\Server\ScheduledScanner.cpp" />
+    <ClCompile Include="AntimalwareService.cpp" />
+    <ClCompile Include="FilesWorker.cpp" />
+    <ClCompile Include="Service.cpp" />
+    <ClCompile Include="ServiceInitializer.cpp" />
+    <ClCompile Include="ServiceManager.cpp" />
+    <ClCompile Include="Source.cpp" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
